--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ section #Info_Cont2 h3 {
 */
 /*
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   Kshitij Mishra
     *****************
 */
 /*# sourceMappingURL=style.css.map */
